[package]
authors = ["jarkkojs", "aarbuzov"]
name = "zmodem2"
description = "ZMODEM file transfer protocol"
repository = "https://codeberg.org/jarkko/zmodem2.git"
license = "MIT OR Apache-2.0"
version = "0.1.2"
edition = "2021"
rust-version = "1.73"

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2.4.1"
crc = "3.0.1"
heapless = "0.8.0"
hex = { version = "0.4.3", default-features = false }
strum = { version = "0.27", default-features=false, features = ["derive"] }
strum_macros = { version = "0.27", default-features=false }
tinyvec = "1.6.0"

[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rstest = "0.18.2"

[[example]]
name = "rzm"

[[example]]
name = "szm"
